--- a/configs/gtk3.css
+++ b/configs/gtk3.css
@@ -11,13 +11,13 @@ decoration {
     border-left-color: black;
 }
 
-headerbar {
+/*headerbar {
     background: black;
 }
 
 window, dialog, messagedialog, viewport, stack, header, toolbar, popover {
     background-color: black;
-}
+}*/
 
 calendar.view {
 	background-color: black;
